--- a/src/components/Header/ItemResources/ItemResources.module.scss
+++ b/src/components/Header/ItemResources/ItemResources.module.scss
@@ -39,3 +39,27 @@
     height: 100%;
   }
 }
+
+@media screen and (max-width: 652px) {
+  .icon {
+    width: 15px;
+    height: 15px;
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .body {
+    display: flex;
+    color: white;
+    padding: 2px 2px;
+    align-items: center;
+    height: 50px;
+    border-radius: 30px;
+    white-space: nowrap;
+    position: relative;
+
+
+  }
+}
