--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -47,6 +47,20 @@
 }
 
 @media screen and (max-width: 652px) {
+  .table {
+    text-align: center;
+    border: 2px solid black;
+    width: 80%;
+    border-collapse: collapse;
+    color: orange;
+    background-color: rgba(0, 0, 0, 0.73);
+
+    tr, td {
+      border: 2px solid black;
+      padding: 10px;
+
+    }
+  }
   .styleBlock {
     div {
       display: flex;
